# saylor-quotes

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: ci.yml  gh-pages.yml
assets/: manifest.json
data/: quotes.json
src/: app.rs  component.rs  data.rs  main.rs
