[package]
name = "saylor-quotes"
version = "0.1.0"
edition = "2024"
authors = ["Jose Storopoli <jose@storopoli.io>"]
description = "Michael Saylor quotes Dioxus app"
license = "MIT"
readme = "README.md"

[dependencies]
lazy_static = "1.5.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# Dioxus
dioxus = { version = "0.7.9", features = ["web"] }
# Dioxus debug
log = "0.4.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dev-dependencies]
http-body-util = "0.1.3"

[profile.release]
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
